perfil con título en español

--- a/index-ejemplos.html
+++ b/index-ejemplos.html
@@ -9,7 +9,7 @@
   <body>
     <div class="container">
       <div class="card-white" id="introduction">
-        <h1>Hello, I´m Juan 😎</h1>
+        <h1>Hola, Soy Juan 😎</h1>
         <img src="profile.jpg" alt="Juan Emiliano Rodríguez">
         <p>I love Roby on Rails, web development and football ⚽. I launched Edutecno to teach code to entrepreneurs and creative people around the world🌍 </p>
         <a href="https://edutecno.cl/" target="_blank">Discover Edutecno</a>
